Remove some unused code

--- a/src/app/task-list/task-list.component.html
+++ b/src/app/task-list/task-list.component.html
@@ -1,5 +1,4 @@
-<p>task-list works!</p>
-<h1>{{ title }}</h1>
+<h1>Task List</h1>
 
 <section class=task-list-form>
     <!-- <label for=""></label> -->
