--- a/src/app/task-list/task-item/task-item.component.html
+++ b/src/app/task-list/task-item/task-item.component.html
@@ -1,4 +1,5 @@
 <li class="task-item">
     <label for="">{{ description }}</label>
     <input type="checkbox" [checked]="completed" />
+    <button>-</button>
 </li>
